--- a/web/.prettierrc
+++ b/web/.prettierrc
@@ -5,7 +5,7 @@
   "tabWidth": 2,
   "useTabs": false,
   "endOfLine": "lf",
-  "trailingComma": "none",
+  "trailingComma": "all",
   "bracketSpacing": true,
   "semi": true
 }
