--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -37,14 +37,14 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 16.x
+          node-version: 20.x
           cache: yarn
-      - name: Set working directory
-        run: cd website
       - name: Install dependencies
         run: yarn install --frozen-lockfile --non-interactive
+        working-directory: website
       - name: Build
         run: yarn build
+        working-directory: website
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
